--- a/api/package.json
+++ b/api/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-jsdoc": "^46.8.1",
     "eslint-plugin-prettier": "^5.0.0",
     "nodemon": "^3.0.1",
+    "pg-mem": "^1.8.6",
     "prettier": "^3.0.3",
     "rimraf": "^5.0.1",
     "ts-jest": "^29.1.1",
