Rename environment variables for consistency

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Shared
-PG_PASSWORD="password123" # TODO=Replace this with database password
-PG_USER="postgres"
-PG_DATABASE="user"
+POSTGRES_PASSWORD="password123" # TODO: Replace this with database password
+POSTGRES_USER="postgres"
+POSTGRES_DB="user"
 HASH_COST=10
 
 # Database
@@ -10,8 +10,8 @@ ADMIN_PASSWORD=""
 
 # API
 PORT=3000
-PG_PORT=""
-PG_POOL_CONNECTION_TIMEOUT_MILLIS=""
-PG_POOL_IDLE_TIMEOUT_MILLIS=""
-PG_POOL_MAX=""
+POSTGRES_PORT=""
+POSTGRES_POOL_CONNECTION_TIMEOUT_MILLIS=""
+POSTGRES_POOL_IDLE_TIMEOUT_MILLIS=""
+POSTGRES_POOL_MAX=""
 SESSION_EXPIRE_MILLIS=""
