--- a/compose.yaml
+++ b/compose.yaml
@@ -6,9 +6,9 @@ services:
       network1:
         ipv4_address: 172.100.0.2
     environment:
-      POSTGRES_PASSWORD: ${PG_PASSWORD}
-      POSTGRES_USER: ${PG_USER}
-      POSTGRES_DB: ${PG_DATABASE}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_DB: ${POSTGRES_DB}
       ADMIN_EMAIL: ${ADMIN_EMAIL}
       ADMIN_PASSWORD: ${ADMIN_PASSWORD}
       HASH_COST: ${HASH_COST}
@@ -21,16 +21,16 @@ services:
       network1:
         ipv4_address: 172.100.0.3
     ports:
-      - "{PORT}:{PORT}"
+      - "${PORT}:${PORT}"
     environment:
-      PG_HOST: "172.100.0.2"
-      PG_PASSWORD: ${PG_PASSWORD}
-      PG_USER: ${PG_USER}
-      PG_DATABASE: ${PG_DATABASE}
-      PG_PORT: ${PG_PORT}
-      PG_POOL_CONNECTION_TIMEOUT_MILLIS: ${PG_POOL_CONNECTION_TIMEOUT_MILLIS}
-      PG_POOL_IDLE_TIMEOUT_MILLIS: ${PG_POOL_IDLE_TIMEOUT_MILLIS}
-      PG_POOL_MAX: ${PG_POOL_MAX}
+      POSTGRES_HOST: "172.100.0.2"
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_PORT: ${POSTGRES_PORT}
+      POSTGRES_POOL_CONNECTION_TIMEOUT_MILLIS: ${POSTGRES_POOL_CONNECTION_TIMEOUT_MILLIS}
+      POSTGRES_POOL_IDLE_TIMEOUT_MILLIS: ${POSTGRES_POOL_IDLE_TIMEOUT_MILLIS}
+      POSTGRES_POOL_MAX: ${POSTGRES_POOL_MAX}
       PORT: ${PORT}
       HASH_COST: ${HASH_COST}
       SESSION_EXPIRE_MILLIS: ${SESSION_EXPIRE_MILLIS}
