--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# Shared
+# Common
 POSTGRES_PASSWORD="password123" # TODO: Replace this with database password
 POSTGRES_USER="postgres"
 POSTGRES_DB="user"
@@ -10,7 +10,6 @@ ADMIN_PASSWORD=""
 
 # API
 PORT=3000
-POSTGRES_PORT=""
 POSTGRES_POOL_CONNECTION_TIMEOUT_MILLIS=""
 POSTGRES_POOL_IDLE_TIMEOUT_MILLIS=""
 POSTGRES_POOL_MAX=""
