--- a/api/.eslintrc
+++ b/api/.eslintrc
@@ -62,6 +62,7 @@
         "tabWidth": 2,
         "ignoreUrls": true,
         "ignoreStrings": true,
+        "ignoreTemplateLiterals": true,
         "ignoreRegExpLiterals": true
       }
     ],
