Change env variables to be postgres non-specific

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Common
-POSTGRES_PASSWORD="password123" # TODO: Replace this with database password
-POSTGRES_USER="postgres"
-POSTGRES_DB="user"
+DATABASE_PASSWORD="password123" # TODO: Replace this with database password
+DATABASE_USER="postgres"
+DATABASE_NAME="user"
 HASH_COST=10
 
 # Database
@@ -10,7 +10,7 @@ ADMIN_PASSWORD=""
 
 # API
 PORT=3000
-POSTGRES_POOL_CONNECTION_TIMEOUT_MILLIS=""
-POSTGRES_POOL_IDLE_TIMEOUT_MILLIS=""
-POSTGRES_POOL_MAX=""
+DATABASE_CONNECTION_TIMEOUT_MILLIS=""
+DATABASE_IDLE_TIMEOUT_MILLIS=""
+DATABASE_MAX_CLIENT_COUNT=""
 SESSION_EXPIRE_MILLIS=""
