--- a/api/.prettierrc
+++ b/api/.prettierrc
@@ -3,5 +3,13 @@
   "importOrderSeparation": true,
   "importOrderSortSpecifiers": true,
   "singleQuote": true,
-  "plugins": ["@trivago/prettier-plugin-sort-imports"]
+  "plugins": ["@trivago/prettier-plugin-sort-imports"],
+  "overrides": [
+    {
+      "files": "*.ts",
+      "options": {
+        "parser": "babel-ts"
+      }
+    }
+  ]
 }
