--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/parser": "^7.23.0",
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.4",
@@ -42,6 +43,8 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "pg": "^8.11.3",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.17",
     "uuid": "^9.0.0"
   }
 }
