--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -8,6 +8,10 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "noImplicitOverride": true
+    "noImplicitOverride": true,
+
+    // Required by TypeORM
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true
   }
 }
