--- a/api/package.json
+++ b/api/package.json
@@ -44,7 +44,6 @@
     "express": "^4.18.2",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.17",
-    "uuid": "^9.0.0"
+    "typeorm": "^0.3.17"
   }
 }
