Rename email to email address to reduce ambiguity

--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ DATABASE_NAME="user"
 HASH_COST=10
 
 # Database
-ADMIN_EMAIL="admin@example.com" # TODO: Replace this with peerprep admin account email
+ADMIN_EMAIL="admin@example.com" # TODO: Replace this with peerprep admin account email address
 ADMIN_PASSWORD=""
 
 # API
