Fix dependency conflict when building api image

--- a/api/dockerfile
+++ b/api/dockerfile
@@ -2,6 +2,7 @@ FROM node:lts-hydrogen
 
 COPY ./build /peerprep_user_service_api/
 COPY package.json /peerprep_user_service_api/
+COPY package-lock.json /peerprep_user_service_api/
 
 WORKDIR /peerprep_user_service_api
 
