--- a/compose.yaml
+++ b/compose.yaml
@@ -8,19 +8,17 @@ services:
       POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
       POSTGRES_USER: ${DATABASE_USER}
       POSTGRES_DB: ${DATABASE_NAME}
-      ADMIN_EMAIL: ${ADMIN_EMAIL}
+      ADMIN_EMAIL_ADDRESS: ${ADMIN_EMAIL_ADDRESS}
       ADMIN_PASSWORD: ${ADMIN_PASSWORD}
       HASH_COST: ${HASH_COST}
 
   user_service_api:
-    depends_on:
-      - user_service_database
     image: peerprep_user_service_api
     build: ./api
     networks:
       - network1
     ports:
-      - "${PORT}:${PORT}"
+      - "${PORT}:3000"
     environment:
       DATABASE_HOST: "user_service_database"
       DATABASE_PASSWORD: ${DATABASE_PASSWORD}
@@ -29,9 +27,12 @@ services:
       DATABASE_CONNECTION_TIMEOUT_MILLIS: ${DATABASE_CONNECTION_TIMEOUT_MILLIS}
       DATABASE_IDLE_TIMEOUT_MILLIS: ${DATABASE_IDLE_TIMEOUT_MILLIS}
       DATABASE_MAX_CLIENT_COUNT: ${DATABASE_MAX_CLIENT_COUNT}
-      PORT: ${PORT}
+      PORT: 3000
       HASH_COST: ${HASH_COST}
       SESSION_EXPIRE_MILLIS: ${SESSION_EXPIRE_MILLIS}
+    depends_on:
+      - user_service_database
+    restart: unless-stopped
 
 networks:
   network1:
