Change ENABLE_DEV_MODE to utilise NODE_ENV instead

--- a/.env
+++ b/.env
@@ -14,4 +14,4 @@ DATABASE_CONNECTION_TIMEOUT_MILLIS=""
 DATABASE_IDLE_TIMEOUT_MILLIS=""
 DATABASE_MAX_CLIENT_COUNT=""
 SESSION_EXPIRE_MILLIS=""
-IS_DEV_ENV="true" # TODO: Set this to false for production
+NODE_ENV="development" # TODO: Set this to "production"
