--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.4",
+    "@types/cors": "^2.8.15",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.5",
     "@types/node": "^20.6.0",
@@ -41,6 +42,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
