--- a/api/.prettierrc
+++ b/api/.prettierrc
@@ -6,7 +6,7 @@
   "plugins": ["@trivago/prettier-plugin-sort-imports"],
   "overrides": [
     {
-      "files": "*.ts",
+      "files": "src/entities/*.ts",
       "options": {
         "parser": "babel-ts"
       }
