Change database to be initialised via a separate container

--- a/.env
+++ b/.env
@@ -1,17 +1,17 @@
-# Common
+# Database
 DATABASE_PASSWORD="password123" # TODO: Replace this with database password
 DATABASE_USER="postgres"
 DATABASE_NAME="user"
-HASH_COST=10
+DATABASE_CONNECTION_TIMEOUT_MILLIS=0
+DATABASE_IDLE_TIMEOUT_MILLIS=10000
+DATABASE_MAX_CLIENT_COUNT=20
 
-# Database
+# Database Initialiser
+HASH_COST=10
 ADMIN_EMAIL_ADDRESS="admin@example.com" # TODO: Replace this with peerprep admin account email address
-ADMIN_PASSWORD=""
+ADMIN_PASSWORD="password123" # TODO: Replace this with peerprep admin account password
 
 # API
 PORT=9000
-DATABASE_CONNECTION_TIMEOUT_MILLIS=""
-DATABASE_IDLE_TIMEOUT_MILLIS=""
-DATABASE_MAX_CLIENT_COUNT=""
-SESSION_EXPIRE_MILLIS=""
-NODE_ENV="development" # TODO: Set this to "production"
+SESSION_EXPIRE_MILLIS=604800000
+NODE_ENV="development"
