--- a/compose.yaml
+++ b/compose.yaml
@@ -7,6 +7,7 @@ services:
       POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
       POSTGRES_USER: ${DATABASE_USER}
       POSTGRES_DB: ${DATABASE_NAME}
+    restart: unless-stopped
 
   user_service_database_initialiser:
     image: peerprep_user_service_database_initialiser
@@ -55,7 +56,7 @@ services:
       NODE_ENV: ${NODE_ENV}
     depends_on:
       - user_service_database
-    restart: on-failure
+    restart: unless-stopped
 
 networks:
   peerprep_network:
