Add force database initialisation

--- a/.env
+++ b/.env
@@ -8,6 +8,7 @@ DATABASE_MAX_CLIENT_COUNT=20
 HASH_COST=10
 
 # Database Initialiser
+SHOULD_FORCE_INITIALISATION="false"
 ADMIN_EMAIL_ADDRESS="admin@example.com" # TODO: Replace this with peerprep admin account email address
 ADMIN_PASSWORD="P@ssword123" # TODO: Replace this with peerprep admin account password
 
