--- a/compose.yaml
+++ b/compose.yaml
@@ -26,6 +26,7 @@ services:
       DATABASE_IDLE_TIMEOUT_MILLIS: ${DATABASE_IDLE_TIMEOUT_MILLIS}
       DATABASE_MAX_CLIENT_COUNT: ${DATABASE_MAX_CLIENT_COUNT}
       HASH_COST: ${HASH_COST}
+      SHOULD_FORCE_INITIALISATION: ${SHOULD_FORCE_INITIALISATION}
       ADMIN_EMAIL_ADDRESS: ${ADMIN_EMAIL_ADDRESS}
       ADMIN_PASSWORD: ${ADMIN_PASSWORD}
     depends_on:
