--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Common
-DATABASE_PASSWORD="password123" # TODO: Replace this with database password
 DATABASE_USER="postgres"
+DATABASE_PASSWORD="P@ssword123" # TODO: Replace this with database password
 DATABASE_NAME="user"
 DATABASE_CONNECTION_TIMEOUT_MILLIS=0
 DATABASE_IDLE_TIMEOUT_MILLIS=10000
@@ -8,9 +8,9 @@ DATABASE_MAX_CLIENT_COUNT=20
 HASH_COST=10
 
 # Database Initialiser
-SHOULD_FORCE_INITIALISATION="false"
 ADMIN_EMAIL_ADDRESS="admin@example.com" # TODO: Replace this with peerprep admin account email address
 ADMIN_PASSWORD="P@ssword123" # TODO: Replace this with peerprep admin account password
+SHOULD_FORCE_INITIALISATION="false"
 
 # API
 PORT=9000
