--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/cors": "^2.8.15",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.5",
+    "@types/jsonwebtoken": "^9.0.4",
     "@types/node": "^20.6.0",
     "@types/pg": "^8.10.2",
     "@types/uuid": "^9.0.3",
@@ -44,6 +45,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.17"
