Update docker compose

--- a/compose.yaml
+++ b/compose.yaml
@@ -52,7 +52,10 @@ services:
       DATABASE_IDLE_TIMEOUT_MILLIS: ${DATABASE_IDLE_TIMEOUT_MILLIS}
       DATABASE_MAX_CLIENT_COUNT: ${DATABASE_MAX_CLIENT_COUNT}
       HASH_COST: ${HASH_COST}
+      ACCESS_TOKEN_PRIVATE_KEY: ${ACCESS_TOKEN_PRIVATE_KEY}
+      ACCESS_TOKEN_PUBLIC_KEY: ${ACCESS_TOKEN_PUBLIC_KEY}
       SESSION_EXPIRE_MILLIS: ${SESSION_EXPIRE_MILLIS}
+      ACCESS_TOKEN_EXPIRE_MILLIS: ${ACCESS_TOKEN_EXPIRE_MILLIS}
       PORT: 9000
       NODE_ENV: ${NODE_ENV}
     depends_on:
