Update kubernetes deployment

--- a/kubernetes/config_maps/core.yaml
+++ b/kubernetes/config_maps/core.yaml
@@ -5,4 +5,5 @@ metadata:
   namespace: peerprep # Defaults to "default"
 data:
   session-expire-millis: '604800000'
+  access-token-expire-millis: '900000'
   hash-cost: '10'
