Rename default database user to be generic

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Common
-DATABASE_USER="postgres"
+DATABASE_USER="user"
 DATABASE_PASSWORD="P@ssword123" # TODO: Replace this with database password
 DATABASE_NAME="user"
 DATABASE_CONNECTION_TIMEOUT_MILLIS=0
