Update kubernetes configs

--- a/kubernetes/secrets/api.yaml
+++ b/kubernetes/secrets/api.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: user-service-core-secret
+  name: user-service-api-secret
   namespace: peerprep
 type: Opaque
 data:
