--- a/kubernetes/config_maps/core.yaml
+++ b/kubernetes/config_maps/core.yaml
@@ -2,6 +2,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: user-service-core-config-map
-  namespace: peerprep # Defaults to "default"
+  namespace: peerprep
 data:
   hash-cost: '10'
