--- a/kubernetes/deployments/api.yaml
+++ b/kubernetes/deployments/api.yaml
@@ -23,8 +23,8 @@ spec:
           env:
             - name: DATABASE_USER
               valueFrom:
-                secretKeyRef:
-                  name: user-service-database-client-secret
+                configMapKeyRef:
+                  name: user-service-database-client-config-map
                   key: database-user
             - name: DATABASE_PASSWORD
               valueFrom:
@@ -33,18 +33,18 @@ spec:
                   key: database-password
             - name: DATABASE_HOST
               valueFrom:
-                secretKeyRef:
-                  name: user-service-database-client-secret
+                configMapKeyRef:
+                  name: user-service-database-client-config-map
                   key: database-host
             - name: DATABASE_PORT
               valueFrom:
-                secretKeyRef:
-                  name: user-service-database-client-secret
+                configMapKeyRef:
+                  name: user-service-database-client-config-map
                   key: database-port
             - name: DATABASE_NAME
               valueFrom:
-                secretKeyRef:
-                  name: user-service-database-client-secret
+                configMapKeyRef:
+                  name: user-service-database-client-config-map
                   key: database-name
             - name: DATABASE_CONNECTION_TIMEOUT_MILLIS
               valueFrom:
@@ -68,8 +68,8 @@ spec:
                   key: access-token-private-key
             - name: ACCESS_TOKEN_PUBLIC_KEY
               valueFrom:
-                secretKeyRef:
-                  name: user-service-api-secret
+                configMapKeyRef:
+                  name: user-service-api-config-map
                   key: access-token-public-key
             - name: SESSION_EXPIRE_MILLIS
               valueFrom:
