--- a/kubernetes/jobs/database_initialiser.yaml
+++ b/kubernetes/jobs/database_initialiser.yaml
@@ -16,8 +16,8 @@ spec:
           env:
             - name: DATABASE_USER
               valueFrom:
-                secretKeyRef:
-                  name: user-service-database-client-secret
+                configMapKeyRef:
+                  name: user-service-database-client-config-map
                   key: database-user
             - name: DATABASE_PASSWORD
               valueFrom:
@@ -26,18 +26,18 @@ spec:
                   key: database-password
             - name: DATABASE_HOST
               valueFrom:
-                secretKeyRef:
-                  name: user-service-database-client-secret
+                configMapKeyRef:
+                  name: user-service-database-client-config-map
                   key: database-host
             - name: DATABASE_PORT
               valueFrom:
-                secretKeyRef:
-                  name: user-service-database-client-secret
+                configMapKeyRef:
+                  name: user-service-database-client-config-map
                   key: database-port
             - name: DATABASE_NAME
               valueFrom:
-                secretKeyRef:
-                  name: user-service-database-client-secret
+                configMapKeyRef:
+                  name: user-service-database-client-config-map
                   key: database-name
             - name: DATABASE_CONNECTION_TIMEOUT_MILLIS
               valueFrom:
@@ -56,8 +56,8 @@ spec:
                   key: hash-cost
             - name: ADMIN_EMAIL_ADDRESS
               valueFrom:
-                secretKeyRef:
-                  name: user-service-database-initialiser-secret
+                configMapKeyRef:
+                  name: user-service-database-initialiser-config-map
                   key: admin-email-address
             - name: ADMIN_PASSWORD
               valueFrom:
