Add TLS support for postgres

--- a/compose.yaml
+++ b/compose.yaml
@@ -21,6 +21,7 @@ services:
       DATABASE_PASSWORD: ${DATABASE_PASSWORD}
       DATABASE_HOST: 'user_service_database'
       DATABASE_PORT: 5432
+      DATABASE_SHOULD_USE_TLS: false
       DATABASE_NAME: ${DATABASE_NAME}
       DATABASE_CONNECTION_TIMEOUT_MILLIS: ${DATABASE_CONNECTION_TIMEOUT_MILLIS}
       DATABASE_MAX_CLIENT_COUNT: ${DATABASE_MAX_CLIENT_COUNT}
@@ -46,6 +47,7 @@ services:
       DATABASE_PASSWORD: ${DATABASE_PASSWORD}
       DATABASE_HOST: 'user_service_database'
       DATABASE_PORT: 5432
+      DATABASE_SHOULD_USE_TLS: false
       DATABASE_NAME: ${DATABASE_NAME}
       DATABASE_CONNECTION_TIMEOUT_MILLIS: ${DATABASE_CONNECTION_TIMEOUT_MILLIS}
       DATABASE_MAX_CLIENT_COUNT: ${DATABASE_MAX_CLIENT_COUNT}
