Update scaling base on database restrictions

--- a/kubernetes/config_maps/database_client.yaml
+++ b/kubernetes/config_maps/database_client.yaml
@@ -10,4 +10,8 @@ data:
   database-should-use-tls: 'true'
   database-name: fgnrvorv
   database-connection-timeout-millis: '0'
-  database-max-client-count: '20'
+
+  # This value should be much higher for actual deployment (e.g. 10 or 20). The
+  # reason why it is set so low is due to free tier database concurrent
+  # connection restrictions.
+  database-max-client-count: '1'
