--- a/kubernetes/deployments/api.yaml
+++ b/kubernetes/deployments/api.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: user-service-api
-          image: ghcr.io/cs3219-ay2324s1-g04/peerprep_user_service_api
+          image: ghcr.io/cs3219-ay2324s1-g04/peerprep_user_service_api:demo
           ports:
             - containerPort: 9000
           env:
